--- a/Flexible_heater.html
+++ b/Flexible_heater.html
@@ -103,27 +103,23 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/flexibleheaters1.jpeg" />
+                                    <img src="products/Flexible Heater/images/ft1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/flexibleheaters2.jpeg" />
+                                    <img src="products/Flexible Heater/images/ft2.png" />
                                 </li>
-                                <li>
-                                    <img src="images/flexibleheaterspecs.png" />
-                                </li>
+                                
+                                
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
                         </div>
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/flexibleheaters1.jpeg" />
+                                    <img src="products/Flexible Heater/pics/ft1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/flexibleheaters2.jpeg" />
-                                </li>
-                                <li>
-                                    <img src="pics/flexibleheaterspecs.png" />
+                                    <img src="products/Flexible Heater/pics/ft2.png" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
