--- a/brass_pressed_heater.html
+++ b/brass_pressed_heater.html
@@ -94,10 +94,19 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/brasspressedheaters1.jpeg" />
+                                    <img src="products\Brass Sleeve Heater\images/bs1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="#"/>
+                                    <img src="products\Brass Sleeve Heater\images/bs2.jpg"/>
+                                </li>
+                                <li>
+                                    <img src="products\Brass Sleeve Heater\images/bs3.png"/>
+                                </li>
+                                <li>
+                                    <img src="products\Brass Sleeve Heater\images/bs4.jpeg"/>
+                                </li>
+                                <li>
+                                    <img src="products\Brass Sleeve Heater\images/bs5.jpg"/>
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -105,10 +114,19 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/brasspressedheaters1.jpeg" />
+                                    <img src="products\Brass Sleeve Heater\pics/bs1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="#" />
+                                    <img src="products\Brass Sleeve Heater\pics/bs2.jpg"/>
+                                </li>
+                                <li>
+                                    <img src="products\Brass Sleeve Heater\pics/bs3.png"/>
+                                </li>
+                                <li>
+                                    <img src="products\Brass Sleeve Heater\pics/bs4.jpeg"/>
+                                </li>
+                                <li>
+                                    <img src="products\Brass Sleeve Heater\pics/bs5.jpg"/>
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
