--- a/ceramic_band_heater.html
+++ b/ceramic_band_heater.html
@@ -102,16 +102,10 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="images/ceramic-band-heater.jpg" />
+                  <img src="products\Ceramic Band Heater\images/cbh1.jpg" />
                 </li>
                 <li>
-                  <img src="images/ceramic-band-heater1.jpeg" />
-                </li>
-                <li>
-                  <img src="images/ceramic-band-heaterspecs1.png" />
-                </li>
-                <li>
-                  <img src="images/ceramic-band-heaterspecs2.png" />
+                  <img src="products\Ceramic Band Heater\images/cbh2.jpeg" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
@@ -119,16 +113,10 @@
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/ceramic-band-heater.jpg" />
+                  <img src="products\Ceramic Band Heater\pics\cbh1.jpg" />
                 </li>
                 <li>
-                  <img src="pics/ceramic-band-heater1.jpeg" />
-                </li>
-                <li>
-                  <img src="pics/ceramic-band-heaterspecs1.png" />
-                </li>
-                <li>
-                  <img src="pics/ceramic-band-heaterspecs2.png" />
+                  <img src="products\Ceramic Band Heater\pics\cbh2.jpeg" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
