--- a/high_density_cartridge_heater.html
+++ b/high_density_cartridge_heater.html
@@ -102,27 +102,34 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="images/hdc1.jpg" />
+                  <img src="products/HDC/images/hdc1.png" />
                 </li>
                 <li>
-                  <img src="images/hdc2.jpg" />
+                  <img src="products/HDC/images/hdc2.png" />
                 </li>
                 <li>
-                  <img src="images/hdcspecs.png" />
+                  <img src="products/HDC/images/hdc3.jpg" />
                 </li>
+                <li>
+                  <img src="products/HDC/images/hdc4.jpg" />
+                </li>
+                
                 <!-- items mirrored twice, total of 12 -->
               </ul>
             </div>
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/hdc1.jpg" />
+                  <img src="products/HDC/pics/hdc1.png" />
                 </li>
                 <li>
-                  <img src="pics/hdc2.jpg" />
+                  <img src="products/HDC/pics/hdc2.png" />
                 </li>
                 <li>
-                  <img src="pics/hdcspecs.png" />
+                  <img src="products/HDC/pics/hdc3.jpg" />
+                </li>
+                <li>
+                  <img src="products/HDC/pics/hdc4.jpg" />
                 </li>
 
                 <!-- items mirrored twice, total of 12 -->
