--- a/immersion_heater.html
+++ b/immersion_heater.html
@@ -103,14 +103,12 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/immersionheaters1.jpg" />
+                                    <img src="products/Immersion Heater/images/ih1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/immersionheaters2.jpg" />
+                                    <img src="products/Immersion Heater/images/ih2.jpg" />
                                 </li>
-                                <li>
-                                    <img src="images/immersionheatersspecs.png" />
-                                </li>
+                                
 
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -118,13 +116,10 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/immersionheaters1.jpg" />
+                                    <img src="products/Immersion Heater/pics/ih1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/immersionheaters2.jpg" />
-                                </li>
-                                <li>
-                                    <img src="pics/immersionheatersspecs.png" />
+                                    <img src="products/Immersion Heater/pics/ih2.jpg" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
