--- a/tubular_heater.html
+++ b/tubular_heater.html
@@ -102,27 +102,40 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="images/finned-tubular-heaters.jpg" />
+                  <img src="products/Tubular Heater/images/th1.jpg" />
                 </li>
                 <li>
-                  <img src="images/finned-tubular-heaters1.jpg" />
+                  <img src="products/Tubular Heater/images/th2.jpg" />
                 </li>
                 <li>
-                  <img src="images/finnedtubularheaterspecs.png" />
+                  <img src="products/Tubular Heater/images/th3.png" />
                 </li>
+                <li>
+                  <img src="products/Tubular Heater/images/th4.png" />
+                </li>
+                <li>
+                  <img src="products/Tubular Heater/images/th5.jpg" />
+                </li>
+                
                 <!-- items mirrored twice, total of 12 -->
               </ul>
             </div>
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/finned-tubular-heaters.jpg" />
+                  <img src="products/Tubular Heater/pics/th1.jpg" />
                 </li>
                 <li>
-                  <img src="pics/finned-tubular-heaters1.jpg" />
+                  <img src="products/Tubular Heater/pics/th2.jpg" />
                 </li>
                 <li>
-                  <img src="pics/finnedtubularheaterspecs.png" />
+                  <img src="products/Tubular Heater/pics/th3.png" />
+                </li>
+                <li>
+                  <img src="products/Tubular Heater/pics/th4.png" />
+                </li>
+                <li>
+                  <img src="products/Tubular Heater/pics/th5.jpg" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
