--- a/coil_nozzle_heater.html
+++ b/coil_nozzle_heater.html
@@ -102,11 +102,18 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="images/coil-nozzle-heater1.jpg" />
+                  <img src="products/Coil Nozzle Heater/images/cnh1.jpg" />
                 </li>
                 <li>
-                  <img src="images/coil-nozzle-heater2.jpg" />
+                  <img src="products/Coil Nozzle Heater/images/cnh2.jpg" />
                 </li>
+                <li>
+                  <img src="products/Coil Nozzle Heater/images/cnh3.jpg" />
+                </li>
+                <li>
+                  <img src="products/Coil Nozzle Heater/images/cnh4.jpg" />
+                </li>
+                
 
                 <!-- items mirrored twice, total of 12 -->
               </ul>
@@ -114,10 +121,16 @@
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/coil-nozzle-heater1.jpg" />
+                  <img src="products/Coil Nozzle Heater/pics/cnh1.jpg" />
                 </li>
                 <li>
-                  <img src="pics/coil-nozzle-heater2.jpg" />
+                  <img src="products/Coil Nozzle Heater/pics/cnh2.jpg" />
+                </li>
+                <li>
+                  <img src="products/Coil Nozzle Heater/pics/cnh3.jpg" />
+                </li>
+                <li>
+                  <img src="products/Coil Nozzle Heater/pics/cnh4.jpg" />
                 </li>
 
 
