--- a/product.html
+++ b/product.html
@@ -177,7 +177,7 @@
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="pics/flexibleheaters1.jpeg" alt="#" /></figure>
+                              <figure><img src="products/Flexible Heater/pics/ft1.jpg" alt="#" /></figure>
                               <a href="Flexible_heater.html">
                                  <h3>Flexible Heater</h3>
                               </a>
