--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
             </div>
             <div class="col-md-7">
                <div class="about_img" style="padding-bottom: 20px;">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d4807.035148497473!2d72.86340775834569!3d19.405566555322!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTnCsDI0JzE1LjYiTiA3MsKwNTEnNTcuNCJF!5e0!3m2!1sen!2sin!4v1720781273862!5m2!1sen!2sin" width="600" height="350" style="border:#000000 solid 2px; border-radius: 25px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d589.7051183070749!2d72.86584594494627!3d19.404159060197262!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7af005b0c7ca1%3A0x5c43c7052c9718b5!2sSMAJ%20Industries!5e0!3m2!1sen!2sin!4v1721984133903!5m2!1sen!2sin" width="600" height="350" style="border:#000000 solid 2px; border-radius: 25px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                </div>
                <div class="about_img" style="padding-bottom: 35px;">
                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d409.5412725964498!2d72.84248312843498!3d19.12817320119776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b7fb8591c521%3A0x6fecdd21c3d1f878!2sSMAJ%20INDUSTRIES!5e0!3m2!1sen!2sin!4v1720781779911!5m2!1sen!2sin" width="600" height="350" style="border:#000000 solid 2px; border-radius: 25px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
