--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                      </div>
                      <div class="col-md-4 margin_bottom1">
                         <div class="product_box">
-                           <figure><img src="pics/microcoilheaters1.jpg" alt="#" /></figure>
+                           <figure><img src="products/Micro Coil Heater/pics/mch1.png" alt="#" /></figure>
                            <a href="micro_coil_heater.html">
                               <h3>Micro Coil Heater</h3>
                            </a>
@@ -167,7 +167,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="product_box">
-                           <figure><img src="pics/brasspressedheaters1.jpeg" alt="#" /></figure>
+                           <figure><img src="pics/bs4.png" alt="#" /></figure>
                            <a href="brass_pressed_heater.html">
                               <h3>Brass Sleeve Heater</h3>
                            </a>
